# mi_web

./: .dockerignore  Cargo.toml  Dockerfile  README.md  cert.pem  fly.toml  key.pem
data/: contactos.json
src/: main.rs
templates/: index.html
